--- a/index.html
+++ b/index.html
@@ -15,6 +15,7 @@
         <li><a href="#branden-espinoza">Branden Espinoza</a>
           <ul>
             <li><a href="#contact">Contact</a>
+            <li><a href="#resources">Resources</a>
             <li><a href="#words">Words</a></li>
           </ul>
         </li>
@@ -27,6 +28,10 @@
       <h2 id="contact">Contact</h2>
       <ul>
         <li><a id="twitter---brandenespinoza" href="https://twitter.com/brandenespinoza">Twitter</a> - @brandenespinoza</li>
+      </ul>
+      <h2 id="resources">Resources</h2>
+      <ul>
+        <li><a href="#">link</a></li>
       </ul>
       <h2 id="words">Words</h2>
       <ul>
