--- a/index.html
+++ b/index.html
@@ -28,6 +28,7 @@
       <h2 id="contact">Contact</h2>
       <ul>
         <li><a id="twitter---brandenespinoza" href="https://twitter.com/brandenespinoza">Twitter</a> - @brandenespinoza</li>
+        <li><a id="instagram---brandenespinoza" href="https://instagram.com/brandenespinoza">Instagram</a> - @brandenespinoza</li>
       </ul>
       <h2 id="resources">Resources</h2>
       <ul>
